--- a/dist.ini
+++ b/dist.ini
@@ -4,16 +4,12 @@ license = Artistic_2_0
 copyright_holder = Przemyslaw Wesolek
 copyright_year   = 2013
 
-version = 0.001
-
 [@Basic]
-
-[Repository]
+[GitHub::Meta]
+[VersionFromModule]
+[MetaJSON]
 
 [Prereqs]
 Acme::CPANAuthors = 0
 Acme::CPANAuthors::Register = 0
-
-[Prereqs / TestRequires]
-Test::More   = 0
 
