dzil generates README

--- a/dist.ini
+++ b/dist.ini
@@ -8,6 +8,10 @@ copyright_year   = 2013
 [GitHub::Meta]
 [VersionFromModule]
 [MetaJSON]
+[ReadmeAnyFromPod / ReadmePodInRoot]
+type = markdown
+filename = README.md
+location = root
 
 [Prereqs]
 Acme::CPANAuthors = 0
