dzil releasing recommendations applied.

--- a/dist.ini
+++ b/dist.ini
@@ -13,6 +13,10 @@ type = markdown
 filename = README.md
 location = root
 
+[TestRelease]
+[ConfirmRelease]
+[UploadToCPAN]
+
 [Prereqs]
 Acme::CPANAuthors = 0
 Acme::CPANAuthors::Register = 0
