Dist::Zilla config modified to add Makefile.PL to repo.
Due to dexter rants at PLPW 2014 and
http://blogs.perl.org/users/piotr_roszatycki/2014/01/i-hate-distzilla-and-missing-makefilepl.html#comment-1311642

--- a/dist.ini
+++ b/dist.ini
@@ -17,3 +17,11 @@ location = root
 Acme::CPANAuthors = 0
 Acme::CPANAuthors::Register = 0
 
+[Run::BeforeBuild]
+run = rm -f LICENSE
+run = rm -f Makefile.PL
+
+[Run::AfterBuild]
+run = cp %d/LICENSE ./
+run = cp %d/Makefile.PL ./
+
